hidden breadcrumbs on mobile & fixed small responsive issue: Rule violation path in ProjectOverview page

--- a/CodeAnalyzerTool/CodeAnalyzerService.UI/code-analyzer-service.ui/src/App.css
+++ b/CodeAnalyzerTool/CodeAnalyzerService.UI/code-analyzer-service.ui/src/App.css
@@ -1,3 +1,9 @@
 body {
   background: #fafafa
 }
+
+@media screen and (max-width: 1000px) {
+  .hidden-mobile {
+    display: none;
+  }
+}
